added state change for buttons and feed update

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -13,14 +13,14 @@
 
   <div id="container">
     <header>
-		<button value="http://www.techbargains.com/rss.xml">techbargains</button
-		<button value="http://feeds.feedburner.com/SlickdealsnetFP?format=xml">slickdeals</button
-		<button value="http://www.woot.com/blog/rss.aspx">woot</button
-		<button value="http://www.gotapex.com/deals/daily/RSS/">gotapex</button
-		<button value="http://feeds.feedburner.com/FatwalletHotDeals">fatwallet</button
-		<button value="http://www.deals2buy.com/rssgen/alldeals.xml">deals2buy</button
-		<button value="http://www.spoofee.com/rss.php">spoofee</button
-		<button value="http://www.buxr.com/rssfeed">buxr</button
+		<button value="http://www.techbargains.com/rss.xml">techbargains</button>
+		<button value="http://feeds.feedburner.com/SlickdealsnetFP?format=xml">slickdeals</button>
+		<button value="http://www.woot.com/blog/rss.aspx">woot</button>
+		<button value="http://www.gotapex.com/deals/daily/RSS/">gotapex</button>
+		<button value="http://feeds.feedburner.com/FatwalletHotDeals">fatwallet</button>
+		<button value="http://www.deals2buy.com/rssgen/alldeals.xml">deals2buy</button>
+		<button value="http://www.spoofee.com/rss.php">spoofee</button>
+		<button value="http://www.buxr.com/rssfeed">buxr</button>
     </header>
 
     <div id="main">
