added about, and favorites

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -23,16 +23,23 @@
 		</div>
 		<div class="subnav">
 			<button class="back">back</button>
-			<button class="fav">favorite</button>
+			<button class="favorite">favorite</button>
 		</div>
 		<div class="settingsnav">
 			<button class="back">back</button>
-			<button class="search">search</button>
-			<button class="fav">favorites</button>
-			<button class="about">about</button>
+			<h1>Settings</h1>
 		</div>
 		<div class="searchnav">
 			<button class="back">back</button>
+			<h1>Search</h1>
+		</div>
+		<div class="favoritesnav">
+			<button class="back">back</button>
+			<h1>Favorites</h1>
+		</div>
+		<div class="aboutnav">
+			<button class="back">back</button>
+			<h1>About</h1>
 		</div>
     </header>
 	<div id="search">
@@ -40,6 +47,24 @@
 	</div>
     <div id="main">
 		<img src="images/loader.gif">
+    </div>
+    <div id="favorites">
+    	<p>It doesn't look like you have any favorites saved.</p>
+    </div>
+    <div id="about">
+    	<p>Dealwad is in short a deals application.  WTF makes it different? We don't do ads, it is a completely free app in every sense of the word.</p>
+    	<p>If you would like to get in contact with the creators of this app please drop us a line below:</p>
+    	<form>
+			<ul>
+				<li><label for="subject">Subject:</label></li>
+				<li><input type="text" id="subject"></li>
+				<li><label for="email">Your Email:</label></li>
+				<li><input type="text" id="email"></li>
+				<li><label for="message">Message:</label></li>
+				<li><input type="text" id="message"></li>
+				<li><input type="submit"></li>
+			</ul>
+ 		</form>
     </div>
     <div id="settings">
 		<p>Select where you want your deals to come from:</p>
@@ -63,16 +88,23 @@
 		</div>
 		<div class="subnav">
 			<button class="back">back</button>
-			<button class="fav">favorite</button>
+			<button class="favorites">favorite</button>
 		</div>
 		<div class="settingsnav">
 			<button class="back">back</button>
-			<button class="search">search</button>
-			<button class="fav">favorites</button>
-			<button class="about">about</button>
+			<h1>Settings</h1>
 		</div>
 		<div class="searchnav">
 			<button class="back">back</button>
+			<h1>Search</h1>
+		</div>
+		<div class="favoritesnav">
+			<button class="back">back</button>
+			<h1>Favorites</h1>
+		</div>
+		<div class="aboutnav">
+			<button class="back">back</button>
+			<h1>About</h1>
 		</div>
     </footer>
   </div>
