--- a/mobile/index.html
+++ b/mobile/index.html
@@ -22,11 +22,12 @@
 			<li><a href="#about" class="about"><span></span>about</a></li>
 
 		</ul>
-		<div class="subnav">
-			<a href="#" class="back"><span></span>back</a>
-			<a href="" class="favorite"><span></span>favorite</button>
-		</div>
-		<div class="settingsnav">
+		<ul class="subnav">
+			<li><a href="#" id="favorite"><span></span>save</a></li>
+			<li><a href="" id="sms"><span></span>sms</a></li>
+			<li><a href="" id="email"><span></span>email</a></li>
+		</ul>
+		<!--<div class="settingsnav">
 			<a href="#" class="back"><span></span>back</a>
 			<h1>Settings</h1>
 		</div>
@@ -41,7 +42,7 @@
 		<div class="aboutnav">
 			<a href="#" class="back"><span></span>back</a>
 			<h1>About</h1>
-		</div>
+		</div>-->
     </header>
 	<div id="search">
 		<a name="search"></a>
@@ -84,33 +85,7 @@
 	</div>
 
     <footer>
-		<div class="nav">
-			<a href="#search" class="search">search</a>
-			<a href="#setting" class="setting">settings</a>
-			<a href="#fav" class="fav">favorites</a>
-			<a href="#about" class="about">about</a>
 
-		</div>
-		<div class="subnav">
-			<a href="/" class="back">back</a>
-			<button class="favorite">favorite</button>
-		</div>
-		<div class="settingsnav">
-			<a href="/" class="back">back</a>
-			<h1>Settings</h1>
-		</div>
-		<div class="searchnav">
-			<a href="/" class="back">back</a>
-			<h1>Search</h1>
-		</div>
-		<div class="favoritesnav">
-			<a href="/" class="back">back</a>
-			<h1>Favorites</h1>
-		</div>
-		<div class="aboutnav">
-			<a href="/" class="back">back</a>
-			<h1>About</h1>
-		</div>
     </footer>
   </div>
   <script src="http://yui.yahooapis.com/3.2.0/build/yui/yui-min.js"></script>
