New Navigation with fixed positioning

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -17,17 +17,17 @@
 		<ul class="nav">
 			<li><a href="#home" class="home"><span></span>home</a></li>
 			<li><a href="#search" class="search"><span></span>search</a></li>
-			<li><a href="#setting" class="setting"><span></span>settings</a>v
+			<li><a href="#setting" class="setting"><span></span>settings</a>
 			<li><a href="#fav" class="fav"><span></span>favorites</a></li>
 			<li><a href="#about" class="about"><span></span>about</a></li>
 
 		</ul>
-		<ul class="subnav">
+		<!--<ul class="subnav">
 			<li><a href="#" id="favorite"><span></span>save</a></li>
 			<li><a href="" id="sms"><span></span>sms</a></li>
 			<li><a href="" id="email"><span></span>email</a></li>
 		</ul>
-		<!--<div class="settingsnav">
+		<div class="settingsnav">
 			<a href="#" class="back"><span></span>back</a>
 			<h1>Settings</h1>
 		</div>
