--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,8 +4,7 @@
   <title>DealWad</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -22,12 +21,7 @@
 			<li><a href="#about" class="about"><span></span>about</a></li>
 
 		</ul>
-		<!--<ul class="subnav">
-			<li><a href="#" id="favorite"><span></span>save</a></li>
-			<li><a href="" id="sms"><span></span>sms</a></li>
-			<li><a href="" id="email"><span></span>email</a></li>
-		</ul>
-		<div class="settingsnav">
+		<!--<div class="settingsnav">
 			<a href="#" class="back"><span></span>back</a>
 			<h1>Settings</h1>
 		</div>
@@ -49,7 +43,7 @@
 		<label for="searchFld">Enter a search term:</label><input type="text" id="searchFld"><button id="searchBtn">Search!</button>
 	</div>
     <div id="main">
-		<img src="images/loader.gif">
+		<img src="images/loader.gif" i="loader">
     </div>
     <div id="favorites">
     	<a name="#fav"></a>
@@ -85,7 +79,11 @@
 	</div>
 
     <footer>
-
+		<ul class="subnav">
+			<li><a href="#" id="favorite"><span></span>save</a></li>
+			<li><a href="" id="sms"><span></span>sms</a></li>
+			<li><a href="" id="email"><span></span>email</a></li>
+		</ul>
     </footer>
   </div>
   <script src="http://yui.yahooapis.com/3.2.0/build/yui/yui-min.js"></script>
